--- a/CLOSET/WebContent/fix/footer.css
+++ b/CLOSET/WebContent/fix/footer.css
@@ -22,13 +22,15 @@ li {
 
 /* footer */
 .footer {
+	
 	width: 100%;
 	background-color: #f5f5f5;
-	border-top: 1px solid #eaeaea;
+	border-top: 1px solid #f5f5f5;
+	position: relative;
 }
 
 .footer__align {
-	padding: 60px 0;
+	padding: 30px 0;
 	width: 1200px;
 	margin: 0 auto;
 	box-sizing: border-box;
@@ -48,11 +50,11 @@ li {
 }
 
 .footer__content strong {
-	font-size: 18px;
+	font-size: 15px;
 }
 
 .footer__content ul {
-	margin-top: 18px;
+	margin-top: 13px;
 	line-height: 2.4;
 }
 
@@ -63,8 +65,8 @@ li {
 
 .footer__icon {
 	vertical-align: middle;
-	width: 16px;
-	height: 16px;
+	width: 14px;
+	height: 14px;
 	padding-right: 10px;
 }
 
