--- a/CLOSET/WebContent/fix/header.css
+++ b/CLOSET/WebContent/fix/header.css
@@ -198,6 +198,15 @@ li {
 	display: inline;
 	vertical-align: middle;
 }
+.jbfixed {
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    right: 0px;
+    z-index: 9999;
+    background-color: white;
+}
+
 .btn_ok {
 	background-color: #30cfc0;
 	color: white;
