--- a/CLOSET/WebContent/join/commission.css
+++ b/CLOSET/WebContent/join/commission.css
@@ -1,403 +1,404 @@
 /* CSS RESET */
+@import
+	url(https://cdn.jsdelivr.net/gh/moonspam/NanumSquare@1.0/nanumsquare.css)
+	;
+
+@import
+	url('https://fonts.googleapis.com/css?family=Montserrat&display=swap');
+
 * {
-    padding: 0;
-    border: 0;
-    margin: 0;
-    font-family: 'Montserrat','NanumSquare', sans-serif;
-}
-a {text-decoration: none;}
-li {list-style: none;}
-
-@import url(https://cdn.jsdelivr.net/gh/moonspam/NanumSquare@1.0/nanumsquare.css);
-@import url('https://fonts.googleapis.com/css?family=Montserrat&display=swap');
-
-.header{
-    width:1200px;
-    margin: 0 auto;
-}
-.header::after{
-    clear: both;
-    display: block;
-    content: "";
-}
-.header__nav{
-    float: right;
-    margin-top: 10px;
-    margin-bottom: 10px;
-}
-.header__text{
-    display: inline-block;
-    font-size: 14px;
-    color: #757575;
-    margin-left: 36px;
-    position: relative;
-}
-.header__text a:link{
-    color: #757575;
-}
-.header__text a:visited{
-    color: #757575;
-}
-.logo__area{
-    width: 1200px;
-    margin: 0 auto;
-    text-align: center;
-}
-.logo{
-    display: inline-block;
+	padding: 0;
+	border: 0;
+	margin: 0;
+	font-family: 'Montserrat', 'NanumSquare', sans-serif;
 }
 
-.bottom__menu{
-    width: 1200px;
-    margin: 0 auto;
+a {
+	text-decoration: none;
 }
-.menu{
-    width:100%;
-    margin: 0 auto;
+
+li {
+	list-style: none;
 }
-.menu::after{
-    display: block;
-    clear: both;
-    content: "";
+
+.header {
+	width: 1200px;
+	margin: 0 auto;
 }
-.menu__list1{
-    float: left;
+
+.header::after {
+	clear: both;
+	display: block;
+	content: "";
 }
-.menu__text{
-    display: inline-block;
-    font-size: 18px;
-    color: black;
-    padding: 20px 34px 20px 34px;
-    position:relative;
+
+.header__nav {
+	float: right;
+	margin-top: 10px;
+	margin-bottom: 10px;
 }
-.menu__text:first-child{
-    padding-left: 0px;
+
+.header__text {
+	display: inline-block;
+	font-size: 14px;
+	color: #757575;
+	margin-left: 36px;
+	position: relative;
 }
-.menu__text a:visited{
-    color: black;
+
+.header__text a:link {
+	color: #757575;
 }
-.menu__text a:link{
-    color: black;
+
+.header__text a:visited {
+	color: #757575;
 }
-.menu__text a:hover{
-    color: #30cfc0;
+
+.logo__area {
+	width: 1200px;
+	margin: 0 auto;
+	text-align: center;
 }
-.sub-menu__list{
-    display: none;  /* 평상시에는 서브메뉴가 안보이게 하기 */
-    height: auto;
-    margin-top:40px;
-    position: absolute;
-    top:20px;
-    left:10px;
-    z-index: 100;
-    font-size: 18px;
-    width:180px;
+
+.logo {
+	display: inline-block;
 }
-.menu__text:hover .sub-menu__list{
-    display: block;
-    background-color:rgba(245,245,245,0.9);
+
+.bottom__menu {
+	width: 1200px;
+	margin: 0 auto;
 }
-.sub-menu__list__text{
-    padding: 10px;
-    box-sizing: border-box;
-    text-align:left;
-    padding-left: 23px;
+
+.menu {
+	width: 100%;
+	margin: 0 auto;
 }
-.sub-menu__list__text a:visited{
-    color:black;
+
+.menu::after {
+	display: block;
+	clear: both;
+	content: "";
 }
-.sub-menu__list__text a:link{
-    color:black;
+
+.menu__list1 {
+	float: left;
 }
-.sub-menu__list__text:hover{
-    background-color: white;
+
+.menu__text {
+	display: inline-block;
+	font-size: 18px;
+	color: black;
+	padding: 20px 34px 20px 34px;
+	position: relative;
 }
-.sub-menu__list__text:hover a{
-    color: #30cfc0;
+
+.menu__text:first-child {
+	padding-left: 0px;
 }
-.menu__list2::after{
-    content: "";
-    display: block;
-    clear: both;
+
+.menu__text a:visited {
+	color: black;
 }
-.menu__search{
-    width: 320px; 
-    height: 31px;
-    box-sizing: border-box;
-    margin:16px 10px 16px 160px;
-    float: left;
-    border: 1px solid #30cfc0;
-    border-radius: 20px;
+
+.menu__text a:link {
+	color: black;
 }
-.search__box{ 
-    border-radius: 20px;
-    margin-left: 10px;
-    width: 270px;
-    height: 29px;
-    padding: 5px 15px 5px 10px;
-    font-size: 16px;
-    color: #757575;
-    box-sizing: border-box;
-    outline: none;
+
+.menu__text a:hover {
+	color: #30cfc0;
 }
-.menu__search button{
-    border-radius: 20px;
-    float: right;
-    padding: 5px 15px 5px 0px;
-    height: 28px;
-    box-sizing: border-box;
-    background-color: white;
+
+.sub-menu__list {
+	display: none; /* 평상시에는 서브메뉴가 안보이게 하기 */
+	height: auto;
+	margin-top: 40px;
+	position: absolute;
+	top: 20px;
+	left: 10px;
+	z-index: 100;
+	font-size: 18px;
+	width: 180px;
 }
-.se__icon{
-   width: 18px;
-   display: inline;
+
+.menu__text:hover .sub-menu__list {
+	display: block;
+	background-color: rgba(245, 245, 245, 0.9);
 }
-.menu__cart button{
-    float: left;
-    padding: 5px;
-    margin:16px 2px;
-    box-sizing: border-box;
-    background-color: white;
+
+.sub-menu__list__text {
+	padding: 10px;
+	box-sizing: border-box;
+	text-align: left;
+	padding-left: 23px;
 }
-.ce__icon{
-   width: 22px;
-   display: inline;
+
+.sub-menu__list__text a:visited {
+	color: black;
 }
+
+.sub-menu__list__text a:link {
+	color: black;
+}
+
+.sub-menu__list__text:hover {
+	background-color: white;
+}
+
+.sub-menu__list__text:hover a {
+	color: #30cfc0;
+}
+
+.menu__list2::after {
+	content: "";
+	display: block;
+	clear: both;
+}
+
+.menu__search {
+	width: 320px;
+	height: 31px;
+	box-sizing: border-box;
+	margin: 16px 10px 16px 160px;
+	float: left;
+	border: 1px solid #30cfc0;
+	border-radius: 20px;
+}
+
+.search__box {
+	border-radius: 20px;
+	margin-left: 10px;
+	width: 270px;
+	height: 29px;
+	padding: 5px 15px 5px 10px;
+	font-size: 16px;
+	color: #757575;
+	box-sizing: border-box;
+	outline: none;
+}
+
+.menu__search button {
+	border-radius: 20px;
+	float: right;
+	padding: 5px 15px 5px 0px;
+	height: 28px;
+	box-sizing: border-box;
+	background-color: white;
+}
+
+.se__icon {
+	width: 18px;
+	display: inline;
+}
+
+.menu__cart button {
+	float: left;
+	padding: 5px;
+	margin: 16px 2px;
+	box-sizing: border-box;
+	background-color: white;
+}
+
+.ce__icon {
+	width: 22px;
+	display: inline;
+}
+
 .jbfixed {
-    position: fixed;
-    top: 0px;
-    background-color: white;
+	position: fixed;
+	top: 0px;
+	background-color: white;
 }
 
 .container {
-    width: 640px;
-    margin: 40px auto;
+	width: 640px;
+	margin: 40px auto;
+	height: auto;	
+	min-height: 100%;	
 }
 
 .title1 {
-    font-size: 28px;
-    margin-bottom: 10px;
+	font-size: 28px;
+	margin-bottom: 10px;
 }
 
 .title2 {
-    margin-bottom: 10px;
+	margin-bottom: 10px;
 }
 
 .title3 {
-    text-align: right;
-    margin-bottom: 10px;
-    color: #30cfc0;
+	text-align: right;
+	margin-bottom: 10px;
+	color: #30cfc0;
 }
 
 .title4 {
-    margin-bottom: 5px;
-    margin-top: 30px;
+	margin-bottom: 5px;
+	margin-top: 30px;
 }
 
 .title5 {
-    margin-bottom: 10px;
+	margin-bottom: 10px;
 }
 
-.form1,
-.form2 {
-    width: 640px;
-    border: 1px solid #e0e0e0;
+.form1, .form2 {
+	width: 640px;
+	border: 1px solid #e0e0e0;
 }
-.form1{
-    border-top: 3px solid #30cfc0;
-    padding: 20px;
-    box-sizing: border-box;
+
+.form1 {
+	border-top: 3px solid #30cfc0;
+	padding: 20px;
+	box-sizing: border-box;
 }
+
 .table1 {
-    width: 600px;
-    margin: 0 auto;
-    height: 450px;
+	width: 600px;
+	margin: 0 auto;
+	height: 450px;
 }
 
 .td {
-    width: 160px;
-    padding-left: 23px;
-    font-size: 16px;
+	width: 160px;
+	padding-left: 23px;
+	font-size: 16px;
 }
-.radio1{
-    margin-top: 10px;
-    margin-bottom: 10px;
-    margin-left: 45px;
+
+.radio1 {
+	margin-top: 10px;
+	margin-bottom: 10px;
+	margin-left: 45px;
 }
+
 input[type='radio'] {
-  -webkit-appearance:none;
-  width:16px;
-  height:16px;
-  border:1px solid #e0e0e0;
-  border-radius:50%;
-  outline:none;
-  background:white;
-  vertical-align: middle;
+	-webkit-appearance: none;
+	width: 16px;
+	height: 16px;
+	border: 1px solid #e0e0e0;
+	border-radius: 50%;
+	outline: none;
+	background: white;
+	vertical-align: middle;
 }
+
 input[type='radio']:before {
-  content:'';
-  display:block;
-  width:60%;
-  height:60%;
-  margin: 20% auto;   
-  border-radius:50%;  
-  vertical-align: middle;
+	content: '';
+	display: block;
+	width: 60%;
+	height: 60%;
+	margin: 20% auto;
+	border-radius: 50%;
+	vertical-align: middle;
 }
+
 input[type='radio']:checked:before {
-  background:#30cfc0;
-  vertical-align: middle;
+	background: #30cfc0;
+	vertical-align: middle;
 }
 
-.choice__sex__content{
-    display: inline;
-}
-.choice__sex span{
-    margin-left: 12px;
-    font-size: 16px;
-    height: 35px;
+.choice__sex__content {
+	display: inline;
 }
 
-.choice__cate{
-    margin-top: 10px;
-    margin-bottom: 10px;
-    margin-left: 45px;
+.choice__sex span {
+	margin-left: 12px;
+	font-size: 16px;
+	height: 35px;
 }
-.choice__cate__content{
-    margin-top: 10px;
-    margin-bottom: 10px;
+
+.choice__cate {
+	margin-top: 10px;
+	margin-bottom: 10px;
+	margin-left: 45px;
 }
-.choice__cate span{
-    margin-left: 12px;
-    width: 200px;
-    margin-right: 30px;
-    font-size: 16px;
+
+.choice__cate__content {
+	margin-top: 10px;
+	margin-bottom: 10px;
 }
+
+.choice__cate span {
+	margin-left: 12px;
+	width: 200px;
+	margin-right: 30px;
+	font-size: 16px;
+}
+
 input[type='checkbox'] {
-  -webkit-appearance:none;
-  width:16px;
-  height:16px;
-  border:1px solid #e0e0e0;
-  outline:none;
-  background:white;
-  vertical-align: middle;
+	-webkit-appearance: none;
+	width: 16px;
+	height: 16px;
+	border: 1px solid #e0e0e0;
+	outline: none;
+	background: white;
+	vertical-align: middle;
 }
+
 input[type='checkbox']:before {
-  content:'';
-  display:block;
-  width:60%;
-  height:60%;
-  margin: 20% auto;    
-  vertical-align: middle;
+	content: '';
+	display: block;
+	width: 60%;
+	height: 60%;
+	margin: 20% auto;
+	vertical-align: middle;
 }
+
 input[type='checkbox']:checked:before {
-  background:#30cfc0;
-  vertical-align: middle;
+	background: #30cfc0;
+	vertical-align: middle;
 }
 
 input[type='number'] {
-  width:140px;
-  height:35px;
-  border:1px solid #e0e0e0;
-  outline:none;
-  background:white;
-  vertical-align: middle;
-  display: inline;
-  padding-left: 10px;
-  box-sizing: border-box;
-  font-size: 16px;
+	width: 140px;
+	height: 35px;
+	border: 1px solid #e0e0e0;
+	outline: none;
+	background: white;
+	vertical-align: middle;
+	display: inline;
+	padding-left: 10px;
+	box-sizing: border-box;
+	font-size: 16px;
 }
 
-.input_date{
-    margin-top: 10px;
-    margin-bottom: 10px;
-    margin-left: 45px;
-    font-size: 16px;
+.input_date {
+	margin-top: 10px;
+	margin-bottom: 10px;
+	margin-left: 45px;
+	font-size: 16px;
 }
+
 input[type='date'] {
-  width:302px;
-  height:35px;
-  border:1px solid #e0e0e0;
-  outline:none;
-  background:white;
-  vertical-align: middle;
-  padding-left: 10px;
-  box-sizing: border-box;
-  display: inline;
+	width: 302px;
+	height: 35px;
+	border: 1px solid #e0e0e0;
+	outline: none;
+	background: white;
+	vertical-align: middle;
+	padding-left: 10px;
+	box-sizing: border-box;
+	display: inline;
 }
 
 .input1 {
-    margin-top: 10px;
-    margin-bottom: 10px;
-    width: 302px;
-    height: 35px;
-    border: 1px solid #e0e0e0;
-    margin-left: 45px;
-    font-size: 16px;
-    padding-left: 10px;
-    box-sizing: border-box;
+	margin-top: 10px;
+	margin-bottom: 10px;
+	width: 302px;
+	height: 35px;
+	border: 1px solid #e0e0e0;
+	margin-left: 45px;
+	font-size: 16px;
+	padding-left: 10px;
+	box-sizing: border-box;
 }
+
 .button2 {
-    background: #30cfc0;
-    border: 0;
-    color: #FFF;
-    width: 148px;
-    height: 35px;
-    padding: 8px;
-    margin-top: 40px;
-    margin-left: 250px;
-    font-size: 16px;
-}
-.footer{
-    width: 100%;
-    height: 230px;
-    background-color:#f7f7f7;
-}
-.footer__content{
-    width: 1200px;
-    margin: 0 auto;
-    padding-top: 50px;
-    text-align: left;
-}
-.footer_icon{
-    width: 40px;
-    padding: 20px;
-}
-.footer_icon:last-child{
-    width: 40px;
-    padding-right: 0px;
-}
-.footer2{
-    width: 100%;
-    height: 50px;
-    background-color:#ebebeb;
-}
-.footer__content p{
-    line-height: 1.8;
-    color: #9e9e9e;
-    font-size: 16px;
-}
-.footer__content2{
-    width: 1200px;
-    margin: 0 auto;
-    text-align: center;
-    box-sizing: border-box;
-    color: #757575;
-    font-size: 16px;
-}
-.footer__content2 p{
-    padding-top: 17px;
-}
-.footer__text{
-    float: left;
-    margin-left: 10px;
-}
-.footer__icon__content{
-    float: left;
-    margin-top: 74px;
-    margin-left: 420px;
-}
-.footer__content::after{
-    display: block;
-    content: "";
-    clear: both;
+	background: #30cfc0;
+	border: 0;
+	color: #FFF;
+	width: 148px;
+	height: 35px;
+	padding: 8px;
+	margin-top: 40px;
+	margin-left: 250px;
+	font-size: 16px;
 }
