--- a/CLOSET/WebContent/join/signupsuccess.css
+++ b/CLOSET/WebContent/join/signupsuccess.css
@@ -1,323 +1,136 @@
 /* CSS RESET */
+@import
+	url(https://cdn.jsdelivr.net/gh/moonspam/NanumSquare@1.0/nanumsquare.css)
+	;
+
+@import
+	url('https://fonts.googleapis.com/css?family=Montserrat&display=swap');
+
 * {
-    padding: 0;
-    border: 0;
-    margin: 0;
-    font-family: 'Montserrat','NanumSquare', sans-serif;
-}
-a {text-decoration: none;}
-li {list-style: none;}
-
-@import url(https://cdn.jsdelivr.net/gh/moonspam/NanumSquare@1.0/nanumsquare.css);
-@import url('https://fonts.googleapis.com/css?family=Montserrat&display=swap');
-
-.header{
-    width:1200px;
-    margin: 0 auto;
-}
-.header::after{
-    clear: both;
-    display: block;
-    content: "";
-}
-.header__nav{
-    float: right;
-    margin-top: 10px;
-    margin-bottom: 10px;
-}
-.header__text{
-    display: inline-block;
-    font-size: 14px;
-    color: #757575;
-    margin-left: 36px;
-    position: relative;
-}
-.header__text a:link{
-    color: #757575;
-}
-.header__text a:visited{
-    color: #757575;
-}
-.logo__area{
-    width: 1200px;
-    margin: 0 auto;
-    text-align: center;
-}
-.logo{
-    display: inline-block;
+	padding: 0;
+	border: 0;
+	margin: 0;
+	font-family: 'Montserrat', 'NanumSquare', sans-serif;
 }
 
-.bottom__menu{
-    width: 1200px;
-    margin: 0 auto;
+a {
+	text-decoration: none;
 }
-.menu{
-    width:1200px;
-    margin: 0 auto;
-}
-.menu::after{
-    display: block;
-    clear: both;
-    content: "";
-}
-.menu__list1{
-    float: left;
-}
-.menu__list2{
-    float: right;
-}
-.menu__text1{
-    display: inline-block;
-    font-size: 18px;
-    color: black;
-    padding: 20px 65px;
-    position:relative;
-}
-.menu__text2{
-    display: inline-block;
-    font-size: 18px;
-    color: black;
-    padding: 20px;
-    position:relative;
-}
-.menu__text1:first-child{
-    padding-left: 0px;
-}
-.menu__text2:last-child{
-    padding-right: 0px;
-}
-.menu__text1 a:visited{
-    color: black;
-}
-.menu__text1 a:link{
-    color: black;
-}
-.menu__text2 .s__link:visited{
-    color: #30cfc0;
-}
-.menu__text2 .s__link:link{
-    color: #30cfc0;
-}
-.menu__text1 a:hover{
-    color: #30cfc0;
-}
-.sub-menu__list{
-    display: none;  /* 평상시에는 서브메뉴가 안보이게 하기 */
-    height: auto;
-    margin-top:40px;
-    position: absolute;
-    top:20px;
-    left:5px;
-    z-index: 100;
-    font-size: 18px;
-    width:180px;
-}
-.menu__text1:hover .sub-menu__list{
-    display: block;
-    background-color:white;
-}
-.sub-menu__list__text{
-    padding: 10px;
-    box-sizing: border-box;
-    text-align:left;
-    padding-left: 23px;
-    color:black;
-}
-.sub-menu__list__text a:visited{
-    color:black;
-}
-.sub-menu__list__text a:link{
-    color:black;
-}
-.sub-menu__list__text:hover{
-    background-color: rgba(245,245,245,0.7);
-}
-.sub-menu__list__text:hover a{
-    color: #30cfc0;
-}
-.menu__list2::after{
-    content: "";
-    display: block;
-    clear: both;
-}
-.s__link{
-	font-size:18px;
-	background-color:white;
-	color:#30cfc0;
-}
-.se__icon{
-    padding-right: 10px;
-    width: 18px;
-    display: inline;  
-    vertical-align: middle;
-}
-.ce__icon{
-    padding-right: 10px;
-    width: 22px;
-    display: inline;
-    vertical-align: middle;
-}
-.jbfixed {
-    position: fixed;
-    top: 0px;
-    left: 0px;
-    right: 0px;
-    z-index: 9999;
-    background-color: white;
+
+li {
+	list-style: none;
 }
 
 .container {
-    width: 680px;
-    margin: 60px auto;
-    margin-bottom:80px;
+	width: 680px;
+	margin: 60px auto;
+	margin-bottom: 80px;
+	min-height: 100%;
+	align-items: center;	
 }
 
 .title1 {
-    font-size: 24px;
-    margin:0 auto;
+	font-size: 24px;
+	margin: 0 auto;
+	text-align: center;
 }
 
-.form1,
-.form2 {
-    width: 680px;
-    border: 1px solid #e0e0e0;
+.form1, .form2 {
+	width: 680px;
+	border: 1px solid #e0e0e0;
 }
-.form1{
-    border-top: 3px solid #30cfc0;
-    padding: 40px 30px;
-    box-sizing: border-box;
-    text-align: center;
+
+.form1 {
+	border-top: 3px solid #30cfc0;
+	padding: 40px 30px;
+	box-sizing: border-box;
+	text-align: center;
 }
 
 .table1 {
-    width: 500px;
-    margin: 0 auto;
-    height: 300px;
+	width: 500px;
+	margin: 0 auto;
+	height: 300px;
 }
 
 .td1 {
-    font-size: 18px;
-    width: 100px;
-    background-color: #eafaf9;
+	font-size: 18px;
+	width: 100px;
+	background-color: #eafaf9;
 }
+
 .td2 {
-    font-size: 16px;
-    background-color: #eafaf9;
+	font-size: 16px;
+	background-color: #eafaf9;
 }
 
 .button2 {
-    background: #30cfc0;
-    border: 0;
-    color: #FFF;
-    width:200px;
-    height: 50px;
-    padding: 4px;
-    margin-top: 40px;
-    margin-left: 240px;
-    font-size: 18px;
-    vertical-align: middle;
+	background: #30cfc0;
+	border: 0;
+	color: #FFF;
+	width: 200px;
+	height: 50px;
+	padding: 4px;
+	margin-top: 40px;
+	margin-left: 240px;
+	font-size: 18px;
+	vertical-align: middle;
 }
 
 .li1 {
-    display: list-item;
-    list-style: none;
-    margin-top: 10px;
-    margin-bottom: 10px;
-    margin-left: 20px;
+	display: list-item;
+	list-style: none;
+	margin-top: 10px;
+	margin-bottom: 10px;
+	margin-left: 20px;
 }
+
 .li2 {
-    display: list-item;
-    list-style: none;
-    margin-bottom: 10px;
-    margin-left: 50px;
+	display: list-item;
+	list-style: none;
+	margin-bottom: 10px;
+	margin-left: 50px;
 }
 
 .agree .all_agree input[type="checkbox"] {
-    display: none;
+	display: none;
 }
 
-.agree .all_agree input[type="checkbox"] + label {
-    display: inline-block;
-    width: 17px;
-    height: 17px;
-    cursor: pointer;
-    border-radius: 3px;
-    border: 1px solid #e0e0e0;
+.agree .all_agree input[type="checkbox"]+label {
+	display: inline-block;
+	width: 17px;
+	height: 17px;
+	cursor: pointer;
+	border-radius: 3px;
+	border: 1px solid #e0e0e0;
 }
 
 .agree .all_agree:after {
-    display: block;
-    clear: both;
-    content: "";
+	display: block;
+	clear: both;
+	content: "";
 }
 
-.agree .all_agree input[type="checkbox"]:checked + label {
-    background: url(images/check.png) #30cfc0 no-repeat center/10px 10px;
+.agree .all_agree input[type="checkbox"]:checked+label {
+	background: url(images/check.png) #30cfc0 no-repeat center/10px 10px;
 }
-
 
 .agree {
-    position: relative;
+	position: relative;
 }
 
-.li1 input[type="checkbox"] + label span {
-    position: absolute;
-    display: block;
-    left: 50px;
+.li1 input[type="checkbox"]+label span {
+	position: absolute;
+	display: block;
+	left: 50px;
 }
 
-.li2 input[type="checkbox"] + label span {
-    position: absolute;
-    display: block;
-    left: 80px;
+.li2 input[type="checkbox"]+label span {
+	position: absolute;
+	display: block;
+	left: 80px;
 }
 
-.btn, .btn:link, .btn:visited{
-    color: #30cfc0;
+.btn, .btn:link, .btn:visited {
+	color: #30cfc0;
 }
-
-/* 풋터 영역 */
-.footer{
-    width: 100%;
-    background-color:#f5f5f5;
-    border-top: 1px solid #eaeaea;
-   =
-}
-.footer__align{
-    padding: 60px 0;
-    width: 1200px;
-    margin: 0 auto;
-    box-sizing: border-box;
-}
-.footer__align::after{
-    display: block;
-    content: "";
-    clear: both;
-}
-.footer__content{
-    color: #424242;
-    padding-right: 193px;
-    float: left;
-    font-size: 16px;
-}
-.footer__content strong{
-    font-size: 18px;
-}
-.footer__content ul{
-    margin-top: 18px;
-    line-height: 2.4;
-}
-.footer__content ul a:link, .footer__content ul a:visited, .footer__content ul a{
-    color: #424242;
-}
-.footer__icon{
-    vertical-align: middle;
-    width: 16px;
-    height: 16px;
-    padding-right: 10px;
-}
-
-.footer__content:last-child{
-    padding-right: 0px;
-}
-
