--- a/CLOSET/WebContent/volunteer/volunteersuccess.css
+++ b/CLOSET/WebContent/volunteer/volunteersuccess.css
@@ -1,4 +1,11 @@
 /* CSS RESET */
+@import
+	url(https://cdn.jsdelivr.net/gh/moonspam/NanumSquare@1.0/nanumsquare.css)
+	;
+
+@import
+	url('https://fonts.googleapis.com/css?family=Montserrat&display=swap');
+
 * {
 	padding: 0;
 	border: 0;
@@ -14,17 +21,12 @@ li {
 	list-style: none;
 }
 
-@import
-	url(https://cdn.jsdelivr.net/gh/moonspam/NanumSquare@1.0/nanumsquare.css)
-	;
-
-@import
-	url('https://fonts.googleapis.com/css?family=Montserrat&display=swap');
-
 .container {
 	width: 680px;
 	margin: 60px auto;
 	margin-bottom: 80px;
+	height: auto;	
+	min-height: 100%;
 }
 
 .table1 {
